Improved graphicals. Added tests.

--- a/test/index.html
+++ b/test/index.html
@@ -6,8 +6,10 @@
 	<link rel="stylesheet" media="screen" href="utils/qunit.css" />
 	<link rel="stylesheet" href="../css/JSAV.css" media="screen" />
 	<!-- Includes -->
-  <script src="http://code.jquery.com/jquery-1.6.1.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
+<script
+   src="/Users/ville/Documents/projects/memorygame/js/jquery-1.6.4.min.js">
+</script>
+<script src="/Users/ville/Documents/projects/khan-exercises/jquery-ui.js"></script>
   <script src="../lib/jquery.transform.light.js"></script>
   <script src="../lib/raphael.js"></script>
 	
@@ -29,6 +31,7 @@
 	<script src="unit/array.js"></script>
 	<script src="unit/anim.js"></script>
 	<script src="unit/code.js"></script>
+	<script src="unit/graphicals.js"></script>
 </head>
 
 <body id="body">
