FIxed lib paths

--- a/test/index.html
+++ b/test/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="../css/JSAV.css" media="screen" />
 	<!-- Includes -->
 <script
-   src="/Users/ville/Documents/projects/memorygame/js/jquery-1.6.4.min.js">
+   src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.js">
 </script>
-<script src="/Users/ville/Documents/projects/khan-exercises/jquery-ui.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
   <script src="../lib/jquery.transform.light.js"></script>
   <script src="../lib/raphael.js"></script>
 	
