More tests for trees

--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
 	<script src="../src/utils.js"></script>
 	<script src="../src/graphicals.js"></script>
 	<script src="../src/datastructures.js"></script>
+	<script src="../src/tree.js"></script>
 	<script src="../src/code.js"></script>
 	<script src="../src/layout.js"></script>
 	<script src="../src/settings.js"></script>
@@ -32,6 +33,7 @@
 	<script src="unit/anim.js"></script>
 	<script src="unit/code.js"></script>
 	<script src="unit/graphicals.js"></script>
+	<script src="unit/tree.js"></script>
 </head>
 
 <body id="body">
