Upgraded to jquery 1.7.1 and jquery-ui 1.8.16

--- a/examples/shellsort.html
+++ b/examples/shellsort.html
@@ -38,9 +38,11 @@
   <p class="jsavoutput jsavline"></p>
 </div>
 
-<script src="http://code.jquery.com/jquery-1.6.1.js"></script>
 <script
-  src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js">
+  src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js">
+    </script>
+<script
+  src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
 </script>
 <script src="../lib/jquery.transform.light.js"></script>
 <script src="../build/JSAV-min.js"></script>
