Small fix and tests for random generation.

--- a/test/index.html
+++ b/test/index.html
@@ -34,6 +34,7 @@
 	<script src="unit/code.js"></script>
 	<script src="unit/graphicals.js"></script>
 	<script src="unit/tree.js"></script>
+	<script src="unit/utils.js"></script>
 </head>
 
 <body id="body">
