Minor change for ssh test

--- a/examples/ShellsortAlt.html
+++ b/examples/ShellsortAlt.html
@@ -410,7 +410,7 @@ style="background-color:#f00;"/>
   // Support for "Exercise 1" button
   $('input[name="ex1"]').click(ex1); // Set callback action
   function ex1() { // This is what we pop up
-    var mystring = "Given a random array of size n, a random increment size I <= n/2, and a random start location S, 0<=S<I (with an arrow over position S), click to highlight the array elements that should be in this sublist. Solve this exercise 10 times in a row to get credit";
+    var mystring = "Given a random array of size n, a random increment size I <= n/2, and a random start location S, 0<=S<I (with an arrow over position S), click to highlight the array elements that should be in this sublist. Solve this exercise 10 times in a row to get credit.";
     alert(mystring);
     this.style.background='#0f0';
   }
