Moved general swap from interaction to effects

--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
 	<script src="../src/code.js"></script>
 	<script src="../src/layout.js"></script>
 	<script src="../src/settings.js"></script>
-	<script src="../src/interaction.js"></script>
+	<script src="../src/effects.js"></script>
 
 	<script src="utils/qunit.js"></script>
 <!--	<script src="data/testrunner.js"></script>-->
