Minor wording change in ShellsortAlt.html

--- a/examples/ShellsortAlt.html
+++ b/examples/ShellsortAlt.html
@@ -451,8 +451,8 @@ style="background-color:#f00;"/>
 </script>
 
 <p>
-At this point, try running Shellsort on an array of your chosen size,
-with either random values or values that you select.
+Now you can try running a complete Shellsort on an array of your
+chosen size, with either random values or values that you select.
 You can also set the increment series.
 Use this tool to make sure that you understand how Shellsort works.
 </p>
