Cleanup needed for setting up OpenDSA distribution. Removed various example AVs. These will reside at OpenDSA. For the moment, am leaving ShellsortAlt.html since the NSF proposal references a particular URL the requires keeping this.

--- a/examples/ShellsortAlt.html
+++ b/examples/ShellsortAlt.html
@@ -3,8 +3,8 @@
 <head>
   <title>Shellsort Presentation v0.3.0: Alternate Version</title>
   <meta charset="utf-8" />
-  <link href="AeBookAV.css" title="CSS" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="../css/JSAV.css" media="screen" />
+  <link href="opendsaAV.css" title="CSS" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" />
 </head>
 
 <body>
@@ -51,8 +51,8 @@
 <script
   src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js">
 </script>
-<script src="../lib/jquery.transform.light.js"></script>
-<script src="../build/JSAV-min.js"></script>
+<script src="http://algoviz.org/OpenDSA/JSAV/lib/jquery.transform.light.js"></script>
+<script src="http://algoviz.org/OpenDSA/JSAV/build/JSAV-min.js"></script>
 
 <input type="button" name="about" value="About"/>
 
@@ -458,7 +458,7 @@ Use this tool to make sure that you understand how Shellsort works.
 </p>
 
 <center>
- <iframe src="shellsort-av.html"
+ <iframe src="http://algoviz.org/OpenDSA/trunk/AV/shellsort-av.html"
 	 type="text/javascript" width="820" height="520"
 	 frameborder="0" marginwidth="0" marginheight="0"
 	 scrolling="no">
@@ -471,7 +471,7 @@ Can you reproduce its behavior?
 </p>
 
 <center>
- <iframe src="ShellsortProficiency.html"
+ <iframe src="http://algoviz.org/OpenDSA/trunk/AV/ShellsortProficiency.html"
 	 type="text/javascript" width="842" height="480"
 	 frameborder="0" marginwidth="0" marginheight="0"
 	 scrolling="no">
@@ -484,7 +484,7 @@ how they affect the cost of Shellsort.
 </p>
 
 <center>
- <iframe src="ShellsortPerformance.html"
+ <iframe src="http://algoviz.org/OpenDSA/trunk/AV/ShellsortPerformance.html"
 	 type="text/javascript" width="842" height="410"
 	 frameborder="0" marginwidth="0" marginheight="0"
 	 scrolling="no">
