Options as data-attributes improvements. Tests for this functionality

--- a/test/index.html
+++ b/test/index.html
@@ -57,6 +57,11 @@
         <li>39</li>
         <li>10</li>
       </ol>
+      <ol id="arraywithoptions" data-layout="bar" data-foo="barber">
+        <li>6</li>
+        <li>4</li>
+        <li data-value="2"></li>
+      </ol>
     </div>
     <div id="emptycontainer"></div>
   </div>
