--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
 	<script src="../src/utils.js"></script>
 	<script src="../src/graphicals.js"></script>
 	<script src="../src/datastructures.js"></script>
+	<script src="../src/array.js"></script>
 	<script src="../src/tree.js"></script>
 	<script src="../src/code.js"></script>
 	<script src="../src/layout.js"></script>
