Another improvement on array values: value initialization from HTML works now

--- a/test/index.html
+++ b/test/index.html
@@ -52,11 +52,11 @@
       <div class="jsavcounter"></div>
       <p class="jsavoutput jsavline"></p>
       <ol id="array">
-        <li>12</li>
-        <li>22</li>
-        <li>14</li>
+        <li data-value-type="number">12</li>
+        <li data-value-type="number">22</li>
+        <li data-value-type="string">14</li>
         <li>39</li>
-        <li>10</li>
+        <li data-value-type="boolean">false</li>
       </ol>
       <ol id="arraywithoptions" data-layout="bar" data-foo="barber">
         <li>6</li>
