Changed the title of the example

--- a/examples/list.html
+++ b/examples/list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Insertion Sort</title>
+    <title>Linked List Example</title>
     <link rel="stylesheet" href="../css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
-    <style>.hl {color:red;}
+    <style>
     .jsavcanvas { height: 500px;}
     </style>
   </head>
