Added a lame test for the binaryheap extra

--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,7 @@
 	<script src="../src/code.js"></script>
 	<script src="../src/layout.js"></script>
 	<script src="../src/settings.js"></script>
+	<script src="../extras/binaryheap.js"></script>
 
 	<script src="utils/qunit.js"></script>
 	<script src="utils/arrayutils.js"></script>
@@ -36,6 +37,8 @@
 	<script src="unit/graphicals.js"></script>
 	<script src="unit/tree.js"></script>
 	<script src="unit/utils.js"></script>
+	<script src="unit/binaryheap.js"></script>
+	
 </head>
 
 <body id="body">
