Refactored event registering to be more general instead of in the tree module

--- a/test/index.html
+++ b/test/index.html
@@ -18,6 +18,7 @@
 	<script src="../src/messages.js"></script>
 	<script src="../src/utils.js"></script>
 	<script src="../src/effects.js"></script>
+	<script src="../src/events.js"></script>
 	<script src="../src/graphicals.js"></script>
 	<script src="../src/datastructures.js"></script>
 	<script src="../src/array.js"></script>
