Support for events in lists. Tests for that support.

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
 	<script src="../src/datastructures.js"></script>
 	<script src="../src/array.js"></script>
 	<script src="../src/tree.js"></script>
+	<script src="../src/list.js"></script>
 	<script src="../src/code.js"></script>
 	<script src="../src/layout.js"></script>
 	<script src="../src/settings.js"></script>
@@ -38,6 +39,7 @@
 	<script src="unit/graphicals.js"></script>
 	<script src="unit/tree.js"></script>
 	<script src="unit/utils.js"></script>
+	<script src="unit/list.js"></script>
 	<script src="unit/binaryheap.js"></script>
 	
 </head>
