--- a/test/index.html
+++ b/test/index.html
@@ -40,6 +40,7 @@
 	<script src="unit/tree.js"></script>
 	<script src="unit/utils.js"></script>
 	<script src="unit/list.js"></script>
+  <script src="unit/effects.js"></script>
 	<script src="unit/binaryheap.js"></script>
 	
 </head>
