Added simple test for graph

--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,8 @@
 	<script src="../src/list.js"></script>
 	<script src="../src/code.js"></script>
 	<script src="../src/layout.js"></script>
-	<script src="../src/settings.js"></script>
+  <script src="../src/settings.js"></script>
+  <script src="../src/graph.js"></script>
 	<script src="../extras/binaryheap.js"></script>
 
 	<script src="utils/qunit.js"></script>
@@ -41,6 +42,7 @@
 	<script src="unit/utils.js"></script>
 	<script src="unit/list.js"></script>
   <script src="unit/effects.js"></script>
+  <script src="unit/graph.js"></script>
 	<script src="unit/binaryheap.js"></script>
 	
 </head>
