--- a/examples/findmax.html
+++ b/examples/findmax.html
@@ -8,12 +8,15 @@
 <body>
 <h1>Selecting the maximum</h1>
 <p>This is demonstration of supporting interactivity outside the
-  context of a slideshow. This might be useful, for example, in
+  context of a slideshow or standard proficiency exercise.
+  (An example of a profiency exercise is shown in
+  simple-exercise.html in this directory.)
+  This might be useful, for example, in
   connection with using JSAV within Khan Academy exercises.</p>
 
 <p>First we create and display a JSAV array with some random
   numbers. You can click on values in the array to highlight or
-  unhighlight them. Your goal is to highlight (only the) array
+  unhighlight them. Your goal is to highlight (only) the array
   position with the biggest element.</p>
 
 <div id="container">
