--- a/examples/pseudocode.html
+++ b/examples/pseudocode.html
@@ -3,10 +3,22 @@
   <head>
     <title>JSAV Example of Pseudocode Objects</title>
     <link rel="stylesheet" href="../css/JSAV.css" type="text/css" media="screen" title="no title" charset="utf-8" />
+    <style>
+    #av {
+      width: 98%;
+      position: relative;
+    }
+    .jsavcounter {
+      position: absolute;
+      float: left;
+      top: 15px;
+    }
+    </style>
   </head>
   <body>
+    <h1>JSAV Pseudocode Demonstration</h1>
     <div id="av">
-      <div class="jsavcontrols"></div>
+      <div class="jsavcontrols"></div><span class="jsavcounter"></span>
       <p class="jsavoutput jsavline"></p>
     </div>
     <script
