--- a/examples/simple-exercise.html
+++ b/examples/simple-exercise.html
@@ -17,7 +17,7 @@
     height: 40px;
   }
 </style>
-
+  <h1>A Simple JSAV Interactive Exercise</h1>
   <div id="jsavcontainer">
     <a class="jsavsettings" href="#">Settings</a>
     <p align="center" class="jsavexercisecontrols"></p>
