--- a/examples/simple-exercise.html
+++ b/examples/simple-exercise.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ShellSort Proficiency Exercise</title>
+<title>Simple JSAV Proficiency Exercise Example</title>
 <link href="AeBookAV.css" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="../css/JSAV.css" type="text/css" />
 </head>
@@ -10,17 +10,21 @@
 <style>
   #jsavcontainer {
     width: 500px;
-    height: 200px;
+    height: 250px;
     background-color: #efe;
   }
   p.jsavoutput.jsavline {
     height: 40px;
+  }
+  .jsavscore {
+    text-align: center;
   }
 </style>
   <h1>A Simple JSAV Interactive Exercise</h1>
   <div id="jsavcontainer">
     <a class="jsavsettings" href="#">Settings</a>
     <p align="center" class="jsavexercisecontrols"></p>
+    <p class="jsavscore"></p>
     <ol id="exerArray"></ol>
     <p class="jsavoutput jsavline"></p>
   </div>
@@ -74,7 +78,8 @@
     // define a variable to hold the value of index to be swapped
     var swapIndex;
     
-    var exercise = av.exercise(modelSolution, initialize, {css: "background-color"});
+    var exercise = av.exercise(modelSolution, initialize, {css: "background-color"},
+                              { feedback: "continuous"});
     exercise.reset();
     
     // bind a function to handle all click events on the array
